--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:hwdc-24-angular-ssg": "node dist/hwdc-24-angular-ssg/server/server.mjs"
+    "serve:ssr:hwdc-24-angular-ssg": "node dist/hwdc-24-angular-ssg/server/server.mjs",
+    "postinstall": "npm run build:builders && npm run build:schematics && npm i ./builders && npm i ./schematics",
+    "build:builders": "cd builders && npm run build",
+    "build:schematics": "cd schematics && npm run build",
+    "generate-content-list": "ng g @ssg-demo/schematics:generate-content-list --content-dir=public/content --content-list-path=public/content/content-list.json --routes-path=routes.txt",
+    "generate-content-markdown": "ng g @ssg-demo/schematics:generate-content",
+    "preview-generated-site": "ng run hwdc-24-angular-ssg:preview-generated-site"
   },
   "private": true,
   "dependencies": {
@@ -15,13 +21,19 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/elements": "^18.2.3",
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.3",
-    "express": "^4.18.2",
+    "@ssg-demo/builders": "file:builders",
+    "@ssg-demo/schematics": "file:schematics",
+    "highlight.js": "^11.10.0",
+    "js-yaml": "^4.1.0",
+    "marked": "^14.1.1",
+    "marked-highlight": "^2.1.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -30,15 +42,19 @@
     "@angular-devkit/build-angular": "^18.2.3",
     "@angular/cli": "^18.2.3",
     "@angular/compiler-cli": "^18.2.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.18.0",
+    "express": "^4.20.0",
+    "gray-matter": "^4.0.3",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.3.3",
     "typescript": "~5.5.2"
   }
 }
